--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
   "dependencies": {
     "@material-ui/core": "^4.9.4",
     "@material-ui/icons": "^4.9.1",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
+    "apollo-link-http": "^1.5.16",
+    "dotenv": "^8.2.0",
+    "graphql": "^14.6.0",
+    "graphql-tag": "^2.10.3",
     "react": "^16.13.0",
+    "react-apollo": "^3.1.3",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
