--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-GRAPHQL_ENDPOINT=https://tmdb-graphql-java.herokuapp.com/graphql
+REACT_APP_API_ENDPOINT=https://tmdb-graphql-java.herokuapp.com/graphql
