--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "serve": "^11.3.0"
+    "react-slick": "^0.25.2",
+    "serve": "^11.3.0",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "dev": "react-scripts start",
