--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "apollo-client": "^2.6.8",
     "apollo-link-http": "^1.5.16",
     "classnames": "^2.2.6",
-    "clsx": "^1.1.0",
     "dotenv": "^8.2.0",
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.3",
@@ -24,7 +23,8 @@
     "react-scripts": "3.4.0",
     "react-slick": "^0.25.2",
     "serve": "^11.3.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "url-search-params": "^1.1.0"
   },
   "scripts": {
     "dev": "react-scripts start",
@@ -54,13 +54,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
+    "@types/classnames": "^2.2.10",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.28",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
-    "@types/classnames": "^2.2.10",
     "@types/react-slick": "^0.23.4",
+    "@types/url-search-params": "^1.1.0",
     "@typescript-eslint/eslint-plugin": "^2.21.0",
     "@typescript-eslint/parser": "^2.21.0",
     "eslint": "^6.8.0",
